fix: update routes
