# go/webhook_endpoints.go
@@ -22,8 +22,8 @@ type ListWebhookOptions struct {
 	Limit  int32
 }
 
-func (e *Webhook) List(ctx context.Context, appId string, options *ListWebhookOptions) (*CursorWebhookOut, error) {
-	req := e.api.WebhookEndpointsApi.V1WebhooksList(ctx, appId)
+func (e *Webhook) List(ctx context.Context, options *ListWebhookOptions) (*CursorWebhookOut, error) {
+	req := e.api.WebhookEndpointsApi.V1WebhooksList(ctx)
 	req = req.Cursor(options.Cursor)
 	req = req.Limit(options.Limit)
 
@@ -34,8 +34,8 @@ func (e *Webhook) List(ctx context.Context, appId string, options *ListWebhookOp
 	return &out, nil
 }
 
-func (e *Webhook) Retrieve(ctx context.Context, appId string, endpointId string) (*WebhookOut, error) {
-	req := e.api.WebhookEndpointsApi.V1WebhooksRetrieve(ctx, appId, endpointId)
+func (e *Webhook) Retrieve(ctx context.Context, endpointId string) (*WebhookOut, error) {
+	req := e.api.WebhookEndpointsApi.V1WebhooksRetrieve(ctx, endpointId)
 	out, res, err := req.Execute()
 	if err != nil {
 		return nil, wrapError(err, res)
@@ -43,8 +43,8 @@ func (e *Webhook) Retrieve(ctx context.Context, appId string, endpointId string)
 	return &out, nil
 }
 
-func (e *Webhook) Create(ctx context.Context, appId string, createWebhookIn *CreateWebhookIn) (*WebhookOut, error) {
-	req := e.api.WebhookEndpointsApi.V1WebhooksCreate(ctx, appId)
+func (e *Webhook) Create(ctx context.Context, createWebhookIn *CreateWebhookIn) (*WebhookOut, error) {
+	req := e.api.WebhookEndpointsApi.V1WebhooksCreate(ctx)
 	req = req.CreateWebhook(*createWebhookIn)
 	out, res, err := req.Execute()
 	if err != nil {
@@ -53,8 +53,8 @@ func (e *Webhook) Create(ctx context.Context, appId string, createWebhookIn *Cre
 	return &out, nil
 }
 
-func (e *Webhook) Update(ctx context.Context, appId string, endpointId string, updateWebhookIn *UpdateWebhookIn) (*WebhookOut, error) {
-	req := e.api.WebhookEndpointsApi.V1WebhooksUpdate(ctx, appId, endpointId)
+func (e *Webhook) Update(ctx context.Context, endpointId string, updateWebhookIn *UpdateWebhookIn) (*WebhookOut, error) {
+	req := e.api.WebhookEndpointsApi.V1WebhooksUpdate(ctx, endpointId)
 	req = req.UpdateWebhook(*updateWebhookIn)
 	out, res, err := req.Execute()
 	if err != nil {
@@ -63,8 +63,8 @@ func (e *Webhook) Update(ctx context.Context, appId string, endpointId string, u
 	return &out, nil
 }
 
-func (e *Webhook) Delete(ctx context.Context, appId string, endpointId string) error {
-	req := e.api.WebhookEndpointsApi.V1WebhooksDelete(ctx, appId, endpointId)
+func (e *Webhook) Delete(ctx context.Context, endpointId string) error {
+	req := e.api.WebhookEndpointsApi.V1WebhooksDelete(ctx, endpointId)
 	_, res, err := req.Execute()
 	if err != nil {
 		return wrapError(err, res)
