# openapi.json
@@ -7,7 +7,7 @@
         "version": "1.0"
     },
     "paths": {
-        "/api/v1/apps/{appId}/wallets": {
+        "/api/v1/wallets": {
             "get": {
                 "security": [
                     {
@@ -24,15 +24,6 @@
                 "summary": "List wallets",
                 "operationId": "v1.wallets.list",
                 "parameters": [
-                    {
-                        "description": "App ID",
-                        "name": "appId",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
                     {
                         "description": "Cursor",
                         "name": "cursor",
@@ -118,17 +109,6 @@
                 ],
                 "summary": "Create wallet",
                 "operationId": "v1.wallets.create",
-                "parameters": [
-                    {
-                        "description": "App ID",
-                        "name": "appId",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
                 "requestBody": {
                     "content": {
                         "application/json": {
@@ -194,7 +174,7 @@
                 }
             }
         },
-        "/api/v1/apps/{appId}/wallets/{walletId}": {
+        "/api/v1/wallets/{walletId}": {
             "get": {
                 "security": [
                     {
@@ -211,15 +191,6 @@
                 "summary": "Get wallet",
                 "operationId": "v1.wallets.retrieve",
                 "parameters": [
-                    {
-                        "description": "App ID",
-                        "name": "appId",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
                     {
                         "description": "Wallet ID",
                         "name": "walletId",
@@ -300,15 +271,6 @@
                 "operationId": "v1.wallets.update",
                 "parameters": [
                     {
-                        "description": "App ID",
-                        "name": "appId",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
                         "description": "Wallet ID",
                         "name": "walletId",
                         "in": "path",
@@ -383,7 +345,7 @@
                 }
             }
         },
-        "/api/v1/apps/{appId}/wallets/{walletId}/accounts": {
+        "/api/v1/wallets/{walletId}/accounts": {
             "get": {
                 "security": [
                     {
@@ -400,15 +362,6 @@
                 "summary": "List wallet accounts",
                 "operationId": "v1.wallets.listAccounts",
                 "parameters": [
-                    {
-                        "description": "App ID",
-                        "name": "appId",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
                     {
                         "description": "Wallet ID",
                         "name": "walletId",
@@ -489,7 +442,7 @@
                 }
             }
         },
-        "/api/v1/apps/{appId}/wallets/{walletId}/deposit_address": {
+        "/api/v1/wallets/{walletId}/deposit_address": {
             "get": {
                 "security": [
                     {
@@ -506,15 +459,6 @@
                 "summary": "Get deposit address",
                 "operationId": "v1.wallets.getDepositAddress",
                 "parameters": [
-                    {
-                        "description": "App ID",
-                        "name": "appId",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
                     {
                         "description": "Wallet ID",
                         "name": "walletId",
@@ -596,7 +540,7 @@
                 }
             }
         },
-        "/api/v1/apps/{appId}/wallets/{walletId}/deposit_addresses": {
+        "/api/v1/wallets/{walletId}/deposit_addresses": {
             "get": {
                 "security": [
                     {
@@ -613,15 +557,6 @@
                 "summary": "List deposit addresses",
                 "operationId": "v1.wallets.listDepositAddresses",
                 "parameters": [
-                    {
-                        "description": "App ID",
-                        "name": "appId",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
                     {
                         "description": "Wallet ID",
                         "name": "walletId",
@@ -718,7 +653,7 @@
                 }
             }
         },
-        "/api/v1/apps/{appId}/addresses": {
+        "/api/v1/addresses": {
             "get": {
                 "security": [
                     {
@@ -735,15 +670,6 @@
                 "summary": "List all addresses",
                 "operationId": "v1.addresses.list",
                 "parameters": [
-                    {
-                        "description": "App ID",
-                        "name": "appId",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
                     {
                         "description": "The code of currency used in the transaction (e.g., TON, USDT, USD, EUR, etc.).",
                         "name": "currency",
@@ -849,7 +775,7 @@
                 }
             }
         },
-        "/api/v1/apps/{appId}/currencies": {
+        "/api/v1/currencies": {
             "get": {
                 "security": [
                     {
@@ -866,15 +792,6 @@
                 "summary": "List currencies",
                 "operationId": "v1.currencies.list",
                 "parameters": [
-                    {
-                        "description": "App ID",
-                        "name": "appId",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
                     {
                         "name": "cursor",
                         "in": "query",
@@ -951,7 +868,7 @@
                 }
             }
         },
-        "/api/v1/apps/{appId}/currencies/{code}": {
+        "/api/v1/currencies/{code}": {
             "get": {
                 "security": [
                     {
@@ -968,15 +885,6 @@
                 "summary": "Get Currency",
                 "operationId": "v1.currencies.retrieve",
                 "parameters": [
-                    {
-                        "description": "App ID",
-                        "name": "appId",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
                     {
                         "description": "Currency code",
                         "name": "code",
@@ -1041,7 +949,7 @@
                 }
             }
         },
-        "/api/v1/apps/{appId}/rates": {
+        "/api/v1/rates": {
             "post": {
                 "security": [
                     {
@@ -1058,15 +966,6 @@
                 "summary": "List rates",
                 "operationId": "v1.rates.list",
                 "parameters": [
-                    {
-                        "description": "App ID",
-                        "name": "appId",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
                 ],
                 "requestBody": {
                     "content": {
@@ -1133,7 +1032,7 @@
                 }
             }
         },
-        "/api/v1/apps/{appId}/rates/estimate": {
+        "/api/v1/rates/estimate": {
             "get": {
                 "security": [
                     {
@@ -1150,15 +1049,6 @@
                 "summary": "Estimates",
                 "operationId": "v1.rates.estimate",
                 "parameters": [
-                    {
-                        "description": "App ID",
-                        "name": "appId",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
                     {
                         "description": "The amount of the base currency you want to convert",
                         "name": "base_amount",
@@ -1243,7 +1133,7 @@
                 }
             }
         },
-        "/api/v1/apps/{appId}/transactions": {
+        "/api/v1/transactions": {
             "get": {
                 "security": [
                     {
@@ -1260,15 +1150,6 @@
                 "summary": "List transactions",
                 "operationId": "v1.transactions.list",
                 "parameters": [
-                    {
-                        "description": "App ID",
-                        "name": "appId",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
                     {
                         "description": "The type of currency involved in the transaction.",
                         "name": "currency",
@@ -1410,7 +1291,7 @@
                 }
             }
         },
-        "/api/v1/apps/{appId}/transactions/{transactionId}": {
+        "/api/v1/transactions/{transactionId}": {
             "get": {
                 "security": [
                     {
@@ -1427,15 +1308,6 @@
                 "summary": "Get transaction",
                 "operationId": "v1.transactions.retrieve",
                 "parameters": [
-                    {
-                        "description": "App ID",
-                        "name": "appId",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
                     {
                         "description": "Transaction ID",
                         "name": "transactionId",
@@ -1500,7 +1372,7 @@
                 }
             }
         },
-        "/api/v1/apps/{appId}/transactions/transfer": {
+        "/api/v1/transactions/transfer": {
             "post": {
                 "security": [
                     {
@@ -1517,15 +1389,6 @@
                 "summary": "Transfer(internal)",
                 "operationId": "v1.transactions.transfer",
                 "parameters": [
-                    {
-                        "description": "App ID",
-                        "name": "appId",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
                 ],
                 "requestBody": {
                     "content": {
@@ -1592,7 +1455,7 @@
                 }
             }
         },
-        "/api/v1/apps/{appId}/transactions/withdraw": {
+        "/api/v1/transactions/withdraw": {
             "post": {
                 "security": [
                     {
@@ -1609,15 +1472,6 @@
                 "summary": "Withdraw",
                 "operationId": "v1.transactions.withdraw",
                 "parameters": [
-                    {
-                        "description": "App ID",
-                        "name": "appId",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
                 ],
                 "requestBody": {
                     "content": {
@@ -1684,7 +1538,7 @@
                 }
             }
         },
-        "/api/v1/apps/{appId}/endpoints": {
+        "/api/v1/endpoints": {
             "get": {
                 "security": [
                     {
@@ -1701,15 +1555,6 @@
                 "summary": "List webhook endpoints",
                 "operationId": "v1.webhooks.list",
                 "parameters": [
-                    {
-                        "description": "App ID",
-                        "name": "appId",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
                     {
                         "name": "cursor",
                         "in": "query",
@@ -1774,15 +1619,6 @@
                 "summary": "Create webhook endpoint",
                 "operationId": "v1.webhooks.create",
                 "parameters": [
-                    {
-                        "description": "App ID",
-                        "name": "appId",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
                 ],
                 "requestBody": {
                     "content": {
@@ -1829,7 +1665,7 @@
                 }
             }
         },
-        "/api/v1/apps/{appId}/endpoints/{endpointId}": {
+        "/api/v1/endpoints/{endpointId}": {
             "get": {
                 "security": [
                     {
@@ -1846,15 +1682,6 @@
                 "summary": "Get webhook endpoint",
                 "operationId": "v1.webhooks.retrieve",
                 "parameters": [
-                    {
-                        "description": "App ID",
-                        "name": "appId",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
                     {
                         "description": "Endpoint ID",
                         "name": "endpointId",
@@ -1925,15 +1752,6 @@
                 "operationId": "v1.webhooks.delete",
                 "parameters": [
                     {
-                        "description": "App ID",
-                        "name": "appId",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
                         "description": "Endpoint ID",
                         "name": "endpointId",
                         "in": "path",
@@ -1992,15 +1810,6 @@
                 "summary": "Update webhook endpoint",
                 "operationId": "v1.webhooks.update",
                 "parameters": [
-                    {
-                        "description": "App ID",
-                        "name": "appId",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
                     {
                         "description": "Endpoint ID",
                         "name": "endpointId",
